--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^9.16.0",
+    "html-to-text": "^9.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
